<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:panelFullBackground="@color/white"
    android:title="Dashboard">



    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/dashboard"
        app:showAsAction="always"
        android:title="" />
    <item
    android:id="@+id/messages"
    android:icon="@drawable/messages_read"
    app:showAsAction="always"
    android:title="" />

    <item
        android:id="@+id/replies"
        android:icon="@drawable/my_messages"
        app:showAsAction="always"
        android:title="" />


    <item
        android:id="@+id/sign_out_action"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        android:onClick="signOut"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_account_action"
        android:orderInCategory="100"
        android:title="@string/delete_account"
        app:showAsAction="never" />
    <item
    android:id="@+id/dashboard_credit_action"
    android:orderInCategory="100"
    android:title="@string/credits"
    app:showAsAction="never" />


</menu>