<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B9EFEDED">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_create_reply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <Button
        android:id="@+id/create_reply_send_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/rounder_button"
        android:onClick="addReplyToDatabase"
        android:text="@string/send_button_str"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_reply_message"

        app:layout_constraintVertical_bias="0.404"
        app:layout_constraintWidth_percent="0.5" />

    <EditText
        android:id="@+id/create_reply_subject"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/rounder"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/subject_hint"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_create_reply"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/create_reply_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:layout_weight="20"
        android:autofillHints=""
        android:background="@drawable/round"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/write_your_letter_here_hint_str"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="textMultiLine"
        android:padding="20dp"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_reply_subject" />


</androidx.constraintlayout.widget.ConstraintLayout>