<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    >

    <!-- This is the tool bar for the register page. Do not modify -->

    <!-- ADD XML ELEMENTS BELOW HERE -->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.083"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="1"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    <TextView
        android:id="@+id/create_account"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:focusable="true"
        android:gravity="center"
        android:text="CREATE AN ACCOUNT"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.069"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.7" />


    <EditText
        android:id="@+id/register_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/rounder"
        android:drawableStart="@drawable/person"
        android:drawablePadding="10dp"
        android:gravity="center|start"
        android:hint="@string/email_hint_str"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="25dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0.473" />


    <EditText
    android:id="@+id/register_password"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:background="@drawable/rounder"
    android:drawableStart="@drawable/lock"
    android:drawablePadding="10dp"
    android:gravity="center|start"
    android:hint="@string/password_hint"
    android:importantForAutofill="no"
    android:inputType="textPassword"
    android:paddingStart="20dp"
    android:paddingEnd="25dp"
    android:textColorHint="@color/black"
        android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHeight_percent="0.06"
    app:layout_constraintHorizontal_bias="0.473"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.5"
    app:layout_constraintWidth_percent="0.7" />



        <EditText
            android:id="@+id/confirm_register_password"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="2"
            android:background="@drawable/rounder"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:gravity="center|start"
            android:hint="@string/confirm_password_hint_str"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="25dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            app:layout_constraintWidth_percent="0.7" />


        <Button
            android:id="@+id/signup_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="2"
            android:background="@drawable/rounder_button"
            android:onClick="signUp"
            android:text="@string/sign_up_button_str"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintWidth_percent="0.4"  />



        <TextView
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_weight="2"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="login"
            android:text="@string/login_str"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintWidth_percent="0.4" />




</androidx.constraintlayout.widget.ConstraintLayout>