<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B9EFEDED">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1"
        app:popupTheme="@style/AppTheme.PopupOverlay" />


    <ScrollView
        android:id="@+id/story_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="15"
        android:background="@drawable/round"
        android:hapticFeedbackEnabled="false"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.76"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_dashboard"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.95">

        <TextView
            android:id="@+id/story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffff"
            android:gravity="center"
            android:text="@string/story_str"
            android:textColor="#393838"
            android:textSize="18sp" />

    </ScrollView>

    <ImageView
        android:id="@+id/report"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:clickable="true"
        android:contentDescription="@string/profile_img_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/new_post"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_scroll_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.2
"
        app:srcCompat="@drawable/flag" />

    <ImageView
        android:id="@+id/new_post"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:clickable="true"
        android:contentDescription="@string/profile_img_button"
        android:focusable="true"
        android:onClick="createPost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reply"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_scroll_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.2
"
        app:srcCompat="@drawable/add_post" />

    <ImageView
        android:id="@+id/next_post"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/img_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/report"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_scroll_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.2"
        app:srcCompat="@drawable/next_post" />

    <ImageView
        android:id="@+id/reply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:contentDescription="@string/profile_img_button"
        android:focusable="true"
        android:onClick="createReply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_scroll_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.2
"
        app:srcCompat="@drawable/send_message" />

</androidx.constraintlayout.widget.ConstraintLayout>